--- a/styles.css
+++ b/styles.css
@@ -555,47 +555,6 @@ img {
   outline: none;
   padding: 0.25rem 0.5rem 0.5rem 0;
 }
-.footer {
-  padding-top: 2rem;
-}
-.footer__container {
-  row-gap: 3.5rem;
-}
-.footer__bg {
-  background-color: var(--first-color-second);
-  padding: 2rem 0 3rem;
-}
-.footer__title {
-  font-size: var(--h1-font-size);
-  margin-bottom: var(--mb-0-25);
-}
-.footer__subtitle {
-  font-size: var(--small-font-size);
-}
-.footer__links {
-  display: flex;
-  flex-direction: column;
-  row-gap: 1.5rem;
-}
-.footer__link:hover {
-  color: var(--first-color-lighter);
-}
-.footer__social {
-  font-size: 1.25rem;
-  margin-right: var(--mb-1-5);
-}
-.footer__social:hover {
-  color: var(--first-color-lighter);
-}
-.footer__copy {
-  font-size: var(--smaller-font-size);
-  text-align: center;
-  color: var(--text-color-light);
-  margin-top: var(--mb-3);
-}
-.footer__title, .footer__subtitle, .footer__link, .footer__social {
-  color: #fff;
-}
 .scrollup {
   position: fixed;
   right: 1rem;
@@ -677,17 +636,6 @@ img {
   .project__img {
     width: 200px;
   }
-  .testimonial__header, .testimonial__data {
-    flex-direction: column;
-    align-items: center;
-  }
-  .testimonial__img {
-    margin-right: 0;
-    margin-bottom: var(--mb-0-25);
-  }
-  .testimonial__data, .testimonial__description {
-    text-align: center;
-  }
 }
 @media screen and (min-width: 568px) {
   .home__content {
@@ -700,7 +648,7 @@ img {
     order: 1;
     justify-self: center;
   }
-  .about__container, .skills_container, .portfolio__content, .project__container, .contact__container, .footer__container {
+  .about__container, .skills_container, .portfolio__content, .project__container, .contact__container {
     grid-template-columns: repeat(2, 1fr);
   }
   .qualification__sections {
@@ -726,7 +674,7 @@ img {
       top: 0;
       bottom: initial;
     }
-    .header, .main, .footer__container {
+    .header, .main {
       padding: 0 1rem;
     }
 
@@ -822,30 +770,13 @@ img {
     .project__data {
       padding-top: 0.8rem;
     }
-    .footer__container {
-      grid-template-columns: repeat(3, 1fr);
-    }
-    .footer__bg {
-      padding: 3rem 0 3.5rem;
-    }
-
-    .footer__links {
-      flex-direction: row;
-      column-gap: 2rem;
-    }
-    .footer__socials {
-      justify-self: flex-end;
-    }
-    .footer__copy {
-      margin-top: 4.5rem;
-    }
   }
 }
 @media screen and (min-width: 1024px) {
   body {
     margin: 0;
   }
-  .header, .main, .footer__container {
+  .header, .main {
     padding: 0;
   }
   .home__blob {
